--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,14 +1,13 @@
 - set_meta_tags title: t('.title'), og: { og_title: t('.og_title')}
 
-section.hero
-  .hero-body
-    .container
-      p.title.has-text-weight-bold
-        = t('.title')
-section.section#new_arrival
-  .container
-    .columns.is-multiline.is-mobile.is-variable.is-3-desktop.is-1-mobile
-      - if @posts.present?
-        = render partial: 'post_image', collection: @posts
-      - else
-        = '投稿がありません'
+main.columns.is-centered
+  .column.is-three-quarters
+    section.section#new_arrival
+      .container
+        p.title.has-text-weight-bold
+          = t('.title')
+        .columns.is-multiline.is-mobile.is-variable.is-3-desktop.is-1-mobile
+          - if @posts.present?
+            = render partial: 'post_image', collection: @posts
+          - else
+            = '投稿がありません'
