Fix: 文言の修正

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -7,7 +7,7 @@ section.hero.hero-1.is-medium[style="background-image: linear-gradient(rgba(0, 0
         |  快適なデスク環境を構築しよう
       p.subtitle.has-text-light
         |  あなたのこだわりポイントは？
-      = link_to 'マイデスクを登録する', new_post_path, class: 'button is-primary is-inverted is-small has-text-weight-semibold', data: { turbolinks: false }
+      = link_to 'マイデスクを投稿する', new_post_path, class: 'button is-primary is-inverted is-small has-text-weight-semibold', data: { turbolinks: false }
 main
   .container        
     section.section#new_arrival
