Fix: フォーム部分のレイアウトを調整

--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,7 +1,11 @@
 - set_meta_tags title: t('.title')
 
-.container
-  h1 
-    | Posts#new
-  p
-    = render 'form'
+main.columns.is-centered.section
+  .column.is-three-quarters
+    section
+      .content
+        h1.title.is-size-4.has-centered
+          | 新しいデスクを投稿
+        hr
+      .content
+        = render 'form'
