--- a/app/views/posts/bookmarks.html.slim
+++ b/app/views/posts/bookmarks.html.slim
@@ -1,12 +1,14 @@
 - set_meta_tags title: t('.title')
 
-.container
-  h1 
-    | Posts#bookmarks
-  p
-  #new_arrival
-    .row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3
-      - if @bookmark_posts.present?
-        = render @bookmark_posts
-      - else
-        = 'ブックマークした投稿がありません'
+main.columns.is-centered
+  .column.is-three-quarters
+    section.section#new_arrival
+      .container
+        p.title.has-text-weight-bold
+          = t('.title')
+        .columns.is-multiline.is-mobile.is-variable.is-3-desktop.is-1-mobile
+          - if @bookmark_posts.present?
+            = render partial: 'post_image', collection: @bookmark_posts
+          - else
+            .section
+              | ブックマークした投稿がありません
