Fix: マイページのレイアウトを修正

--- a/app/javascript/stylesheets/bulma_override.scss
+++ b/app/javascript/stylesheets/bulma_override.scss
@@ -1,6 +1,10 @@
-/* ボトムナビをスマホ表示 */
+/* スマホでのみ表示 */
 @media(min-width: 768px) {
   .is-fixed-bottom {
+    display: none;
+  }
+
+  .is-mobile-only {
     display: none;
   }
 }
