--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -17,9 +17,9 @@
                 | アップロードされてません
         .content
           dl
-            dt.has-text-grey-lighter.is-size-7
+            dt.has-text-grey-lighter.is-size-7.has-text-weight-semibold
               | 画像形式: JPEG/PNG
-            dt.has-text-grey-lighter.is-size-7
+            dt.has-text-grey-lighter.is-size-7.has-text-weight-semibold
               | 推奨サイズ: 4x3
       .column
         .media-content
@@ -49,7 +49,7 @@
       .field
         .control
           = f.collection_check_boxes :category_ids, Category.all, :id, :name, include_hidden: false do |b|
-            = b.label class: 'checkbox' do
+            = b.label class: 'checkbox has-text-weight-semibold' do
               = b.check_box + b.text
               
   .field.is-horizontal
@@ -66,7 +66,7 @@
     .field-body
       .field
         .control
-          = f.submit '投稿する', class: %w[button is-primary has-text-weight-bold]
+          = f.submit '投稿する', class: %w[button is-white has-text-weight-semibold is-rounded]
 
 / モーダル部分
 #item-search-modal.item-search-modal-wrapper
