--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -66,7 +66,7 @@
     .field-body
       .field
         .control
-          = f.submit '投稿する', class: %w[button is-white has-text-weight-semibold is-rounded]
+          = f.submit '投稿する', class: %w[button is-light has-text-weight-semibold is-rounded]
 
 / モーダル部分
 #item-search-modal.item-search-modal-wrapper
