Fix: simple_formからform_withの変更に伴ったurlの修正

--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with model: @user, local: true do |f|
+= form_with model: @user, url: profile_path, local: true do |f|
   .field
     label.label
       = f.label :name
@@ -24,7 +24,7 @@
       = image_tag @user.image.url(:thumb),
                   class: 'is-rounded',
                   id: 'preview'
-                  
+
   .field
     label.label
       = f.label :description
