Fix: 明瞭さのためにTwitterシェアボタンの修正

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -33,9 +33,9 @@ main.columns.is-centered
                         = ' List'
                 = link_to "https://twitter.com/share?url=#{request.url}&text=#{@user.name}のデスク集&hashtags=Buildesk,デスク周り,デスクツアー", title: 'Twitter', target: '_blank', class: 'card-footer-item'
                   span.icon-text
-                    i.fas.fa-share
+                    i.fab.fa-twitter
                     span
-                      = ' Twitter'
+                      = ' Share'
           .column.is-half
             p.title.has-text-weight-bold.is-4
               = "#{@user.name}のデスク"
