--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,19 +1,26 @@
-tr id="comment-#{comment.id}"
-  td style="width: 60px"
-    = link_to user_path(comment.user) do
-      = image_tag comment.user.image_url, class: 'rounded-circle', size: '50x50'
-  td 
-    h3 class="small"
-      = comment.user.name 
-    div id="js-comment-#{comment.id}"
-      = simple_format(comment.body)
-    div id="js-textarea-comment-box-#{comment.id}" style="display: none;"
-      textarea id="js-textarea-comment-#{comment.body}" class="form-control mb-1"
-        = comment.body
-      button class="btn btn-light js-button-edit-comment-cancel" data-comment-id="#{comment.id}"
-        = 'キャンセル'
-      button class="btn btn-success js-button-comment-update" data-comment-id="#{comment.id}"
-        = '更新'
+article.media
+  figure.media-left
+    p.image.is-48x48
+      = image_tag comment.user.image_url(:thumb), class: 'is-rounded'
+  .media-content
+    .content
+      p
+        strong
+          = link_to user_path(comment.user) do
+            = comment.user.name
+        br
+          div id="js-comment-#{comment.id}"
+            = simple_format(comment.body)
+        small
+          a
+            | Reply
+          time
+            = time_ago_in_words(comment.created_at)
+            = "前"
+      
+    
+      
+    
 
   /- if current_user&.own?(comment)
     td class="action"
