--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -17,6 +17,9 @@ article.media
           time
             = time_ago_in_words(comment.created_at)
             = "前"
+          p
+            = link_to '削除', comment_path(comment), method: :delete,
+                                                    data: { confirm: t('defaults.message.delete_confirm') }
       
     
       
