--- a/app/javascript/stylesheets/bulma_override.scss
+++ b/app/javascript/stylesheets/bulma_override.scss
@@ -16,3 +16,21 @@
   background-position: center;
 }
 
+/* スマホ表示時の順番を指定 */
+@media screen and (max-width: 768px) {
+  .order1 {
+    order: 1;
+  }
+  .order2 {
+    order: 2;
+  }
+  .order3 {
+    order: 3;
+  }
+  .order4 {
+    order: 4;
+  }
+  .order5 {
+    order: 5;
+  }
+}
