Add: コメントを追加

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -74,6 +74,7 @@ main
                         | Not registered..
           .columns.is-12
             .column
+              / orderクラスが使えなかったのでis-hidden-desktopクラスで表示順を対応
               .column.is-hidden-desktop
                 p.title.has-text-weight-bold.is-5
                   = t('activerecord.models.comment')
